# taskflow-demo

./: .env  .gitignore  CLAUDE.md  DEMO_SUMMARY.md  Makefile  README.md  pyproject.toml  requirements-lock.txt
scripts/: demo_walkthrough.md  quick_demo.py
task_client/: .env.example  README.md  package-lock.json  package.json  vite.config.js
task_client/src/: App.jsx  index.css
task_client/src/components/: CreateProjectModal.jsx  CreateTaskModal.jsx  ProjectList.jsx  TaskList.jsx  TaskSummary.jsx
task_client/src/context/: AuthContext.jsx
task_client/src/pages/: DailySummary.jsx  Dashboard.jsx  Login.jsx  ProjectDetail.jsx  (+1 more)
taskflow/: __init__.py  main.py
taskflow/api/: __init__.py  analytics_api.py  health_api.py  projects_api.py  reports_api.py  tasks_api.py  users_api.py
taskflow/migrations/: __init__.py
taskflow/models/: __init__.py  base.py  project.py  repository.py  task.py  user.py
taskflow/scripts/: __init__.py  seed_data.py
taskflow/services/: __init__.py  analytics_service.py  auth_service.py  batch_service.py  cache_service.py  comment_service.py  export_service.py  notification_service.py  project_service.py  report_service.py  scheduler_service.py  search_service.py  task_service.py  user_service.py  webhook_service.py
taskflow/utils/: __init__.py  config.py  data_processing.py  date_utils.py  email_client.py  formatters.py  helpers.py  logger.py  performance.py  security.py  text_processing.py  validators.py
tests/: __init__.py  conftest.py  test_analytics.py  test_projects.py  test_reports.py  test_tasks.py  test_users.py
(+1 files in other folders)
